fixed footer and made text a little smaller (the gaps in between)

--- a/css/styles.css
+++ b/css/styles.css
@@ -108,9 +108,15 @@
 }
 
 .contact_us{
-  
+    margin: 0;
 }
 
 .foot_links1{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 
+.contactinfo{
+    margin: 0;
 }
